--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,4 +1,4 @@
-name: Rust Build and Release
+name: Rust Service Build and Release
 
 on:
   push:
@@ -15,7 +15,8 @@ jobs:
       with:
         toolchain: stable
         default: true
-    - name: Build Release
+    - name: Build Release in Service
+      working-directory: ./service
       run: cargo build --release
     - name: Create Release
       id: create_release
@@ -33,7 +34,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./target/release/post-service
-        asset_name: post-service
+        asset_path: ./service/target/release/service
+        asset_name: service
         asset_content_type: application/octet-stream
-
