--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,6 +15,8 @@ jobs:
       with:
         toolchain: stable
         default: true
+    - name: Install protobuf-compiler
+      run: sudo apt-get update && sudo apt-get install -y protobuf-compiler
     - name: Build Release in Service
       working-directory: ./service
       run: cargo build --release
