--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -10,6 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+      with:
+        submodules: 'recursive' # 递归检出submodules
     - name: Set up Rust
       uses: actions-rs/toolchain@v1
       with:
@@ -17,6 +19,10 @@ jobs:
         default: true
     - name: Install protobuf-compiler
       run: sudo apt-get update && sudo apt-get install -y protobuf-compiler
+    - name: Compile .proto files
+      working-directory: ./service
+      run: |
+        protoc --proto_path=./ --rust_out=./src/ ./api/**/*.proto
     - name: Build Release in Service
       working-directory: ./service
       run: cargo build --release
