--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -32,6 +32,10 @@ jobs:
         release_name: Release testmode
         draft: false
         prerelease: false
+    - name: Print current directory
+      run: pwd
+    - name: List files in the current directory
+      run: ls -lah ..
     - name: Upload Release Asset
       uses: actions/upload-release-asset@v1
       env:
