--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -35,13 +35,13 @@ jobs:
     - name: Print current directory
       run: pwd
     - name: List files in the current directory
-      run: ls -lah ..
+      run: ls -lah ./target
     - name: Upload Release Asset
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ../target/release/post-service
+        asset_path: ./target/release/post-service
         asset_name: post-service
         asset_content_type: application/octet-stream
