--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -36,8 +36,10 @@ jobs:
       run: pwd
     - name: List files in the current directory
       run: ls -lah ./target
+    - name: move to service name
+      run: cp ./target/release/post-service ./target/release/service
     - name: Zip the build
-      run: zip -j ./target/release/post-service.zip ./target/release/post-service
+      run: zip -j ./target/release/service.zip ./target/release/service
     - name: Upload Release Asset
       uses: actions/upload-release-asset@v1
       env:
