--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -46,6 +46,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./target/release/post-service.zip
-        asset_name: post-service.zip
+        asset_path: ./target/release/service.zip
+        asset_name: service.zip
         asset_content_type: application/zip
